c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/misplaced_storage_class.c
struct s {
    int a;
};

// storage class specifier can't come between struct keyword and tag
struct static s foo;